welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: ')' expected but '.' found.
	for(k<-0 nums.length -1)
                     ^indexOfMaxValue:8: error: illegal start of simple expression
}
^